Fix persistent scrollbar in collection menu dropdown

--- a/src/styles/collectionMenu.scss
+++ b/src/styles/collectionMenu.scss
@@ -35,6 +35,6 @@
 .collection-menu-dropdown {
     max-width: 300px;
     max-height: 80vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
